# graphista

./: .gitignore  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  c.py  console.py  example.py  memory.py  pyproject.toml  test_runner.py
.github/: pull_request_template.md
docs/: advanced_usage.md  api_reference.md  installation.md  quickstart.md
full_code/: combined_code_20250131_002923.txt  combined_code_20250131_045119.txt  combined_code_20250131_213207.txt  combined_code_20250201_051701.txt  combined_code_20250201_054515.txt  combined_code_20250202_054531.txt  combined_code_20250203_185045.txt  combined_code_20250203_231821.txt  combined_code_20250204_220144.txt  combined_code_20250204_222257.txt  combined_code_20250204_223126.txt  combined_code_20250204_231647.txt  combined_code_20250205_064427.txt  combined_code_20250205_165539.txt  combined_code_20250205_190206.txt  combined_code_20250205_211047.txt  combined_code_20250205_231825.txt  combined_code_20250206_173649.txt  combined_code_20250206_203141.txt  combined_code_20250206_234954.txt  combined_code_20250207_061658.txt  combined_code_20250207_160224.txt  combined_code_20250207_180930.txt  combined_code_20250207_190709.txt  combined_code_20250207_193159.txt  combined_code_20250207_193853.txt  combined_code_20250207_200730.txt  combined_code_20250207_214507.txt  combined_code_20250207_222905.txt  combined_code_20250208_031207.txt  combined_code_20250208_072135.txt  combined_code_20250214_022930.txt  combined_code_20250214_064418.txt  combined_code_20250214_071744.txt  combined_code_20250215_034321.txt  combined_code_20250215_155628.txt
graphrouter/: README.md  __init__.py  base.py  cache.py  config.py  core_ontology.py  errors.py  falkordb.py  local.py  monitoring.py  neo4j.py  ontology.py  query.py  query_builder.py  transaction.py
ingestion_engine/: README.md  ingestion_engine.py
llm_engine/: README.md  enrichment.py  litellm_client.py  llm_cot_tool.py  llm_smart_node_processor.py  node_processor.py  tool_integration.py
tests/: conftest.py  test_base.py  test_cache.py  test_comprehensive_search.py  test_console.py  test_core_ontology.py  test_falkordb.py  test_ingestion_engine.py  test_litellm_client.py  test_llm_cot_tool.py  test_llm_smart_node_processor.py  test_local.py  test_memory.py  test_monitoring.py  test_neo4j.py  test_node_processor.py  test_ontology.py  test_query_builder.py  test_readme_integration.py  test_tool_integration.py  test_transaction.py
(+3 files in other folders)
