[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrouter"
version = "0.1.0"
description = "A flexible Python graph database router library with multiple backend support"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "GraphRouter Contributors", email = "contributors@graphrouter.org" }
]
keywords = ["graph", "database", "neo4j", "falkordb", "router", "graph-database", "database-router"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "neo4j>=5.0.0",
    "redis>=5.0.0", # For FalkorDB support
    "timeout-decorator>=0.5.0",
    "tenacity>=8.0.1", # For retry logic
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
    "oauthlib>=3.2.2",
    "flask-login>=0.6.3",
    "flask>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=22.0.0,<23.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.9.0,<0.10.0",
]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
]
docs = [
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/graphrouter/graphrouter"
Documentation = "https://graphrouter.readthedocs.io"
"Bug Tracker" = "https://github.com/graphrouter/graphrouter/issues"
"Source Code" = "https://github.com/graphrouter/graphrouter"
"Change Log" = "https://github.com/graphrouter/graphrouter/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=graphrouter"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
